--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
     "start": "node index.js"
   },
   "dependencies": {
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "install": "^0.13.0",
+    "path": "^0.12.7",
     "spotify-web-api-node": "^4.0.0"
   }
 }
