--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "express": "^4.17.1",
     "install": "^0.13.0",
     "jquery": "^3.5.1",
+    "node-fetch": "^2.6.1",
     "path": "^0.12.7",
     "spotify-web-api-node": "^4.0.0"
   }
